@@ -1,3 +1,6 @@
+29-10-2008 J-Donald Tournier <d.tournier@brain.org.au>
+    * cmd/mrabs.cpp: new command to take absolute value of image intensities
+
 14-10-2009 J-Donald Tournier <d.tournier@brain.org.au>
     * lib/mrtrix.cpp: fix parse_float() to handle NaN in string specification
 
